# spiteful

./: .travis.yml  README.md  spiteful.cabal  stack.yaml
src/: Main.hs
src/Spiteful/: Features.hs  Logging.hs  Metrics.hs  Options.hs  Reddit.hs  Util.hs
src/Spiteful/Features/: DAE.hs  DontUpvote.hs  IfThisGetsUpvotes.hs  UpvoteIf.hs
