name:                spiteful
version:             0.1.0.0
synopsis:            Reddit bot that mischievous things out of spite
-- description:
homepage:            https://github.com/Xion/spiteful#readme
license:             BSD3
license-file:        LICENSE
author:              Karol Kuczmarski
maintainer:          karol.kuczmarski@gmail.com
copyright:           2017 Karol Kuczmarski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spiteful
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , data-default >= 0.7
                       , either >= 4.4
                       , http-client >= 0.5
                       , http-client-tls
                       , reddit >= 0.2
                       , pipes
                       , text >= 1.2
