name:                spiteful
version:             0.1.0.0
synopsis:            Mischievous Reddit bot
description:         Reddit bot that does things out of spite
homepage:            https://github.com/Xion/spiteful#readme
license:             BSD3
license-file:        LICENSE
author:              Karol Kuczmarski
maintainer:          karol.kuczmarski@gmail.com
copyright:           2017 Karol Kuczmarski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spiteful
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Spiteful.Features
                       , Spiteful.Features.DAE
                       , Spiteful.Features.DontUpvote
                       , Spiteful.Features.IfThisGetsUpvotes
                       , Spiteful.Features.UpvoteIf
                       , Spiteful.Logging
                       , Spiteful.Metrics
                       , Spiteful.Options
                       , Spiteful.Reddit
                       , Spiteful.Util
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
                      , RecordWildCards
                      , TupleSections
  build-depends:       aeson >= 0.11
                       , async >= 2.1.1
                       , base >= 4.7 && < 5
                       , bytestring >= 0.10
                       , data-default >= 0.7
                       , either >= 4.4
                       , extra >= 1.5
                       , hashable >= 1.2.6.1
                       , http-client-tls
                       , http-types >= 0.9
                       , linebreak >= 1.0.0
                       , network >= 2.6.3
                       , optparse-applicative >= 0.14
                       , pipes
                       , random >= 1.1
                       , reddit >= 0.2
                       , regex-compat >= 0.95
                       , signal >= 0.1
                       , safe >= 0.3
                       , split >= 0.2
                       , stm >= 2.4.4
                       , terminal-size >= 0.3.2
                       , text >= 1.2
                       , text-format >= 0.3.1
                       , text-icu >= 0.7
                       , unordered-containers >= 0.2.8
                       , wai >= 3.2.1
                       , warp >= 3.2
  GHC-Options:         -fwarn-tabs
                       -fwarn-incomplete-patterns
                       -fwarn-unused-imports
                       -fwarn-missing-signatures
                       -O2
